<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/encryption_Key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/encryption_key" />

    <EditText
        android:id="@+id/encryption_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/encryption_iv" />
    <Spinner
        android:id="@+id/encryption_output_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:entries="@array/encryption_output_mode"/>
    <EditText
        android:id="@+id/text_to_encrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_to_encrypt" />

    <Button
        android:id="@+id/encrypt_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypt"/>

    <TextView
        android:id="@+id/encrypt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_marginVertical="32dp"/>




    <EditText
        android:id="@+id/decryption_Key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/decryption_key" />

    <EditText
        android:id="@+id/decryption_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/decryption_iv" />
    <Spinner
        android:id="@+id/decryption_output_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:entries="@array/encryption_output_mode"/>
    <EditText
        android:id="@+id/text_to_decrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_to_decrypt" />

    <Button
        android:id="@+id/decrypt_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypt"/>


    <TextView
        android:id="@+id/decrypt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textIsSelectable="true"/>

</LinearLayout>